--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@
 .body {
   background-color: var(--primary-bg-color);
   font-family: "Roboto", sans-serif;
+  font-display: fallback;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
