--- a/css/secondary.css
+++ b/css/secondary.css
@@ -14,6 +14,7 @@
 .body {
   background-color: var(--primary-bg-color);
   font-family: "Roboto", sans-serif;
+  font-display: fallback;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
@@ -98,6 +99,11 @@
   color: var(--primary-text-color);
   font-weight: 400;
   line-height: 1.87;
+}
+
+.project-name:hover,
+.type-of-work:hover {
+  color: var(--accent-color);
 }
 
 /* Контакты страница */
